--- a/default.css
+++ b/default.css
@@ -5,44 +5,66 @@
 }
 
 /* COLOR */
-.soda-barn-title {
-  /*background-color: #025B6D;*/ /*#0F8788;*/ /*teal*/
-  /*background-image: url("/media/soda-barn-pattern.png");*/
+.soda-barn-header {
+  /*background-image: url("/media/background-pattern.png");*/
   color: white;
-	background-color: #1B5F76
+	background-color:	#1B5F76;				 /*#1B5F76*/
+}
+.header-divider {
+  background-color: white;
 }
 body {
 	background-color: white;
 }
+.page-content {
+  background-color: white;
+}
 .navbar, .footer {
-	background-color: lightgray;
-	color: black;
+	background-color: #1B5F76; /*lightgray;*/
+	color: white;
 }
 
 /* FONT */
 body {
 	font-family: "Century Gothic", "Arial", sans-serif;
+  background-image: url("/media/background-pattern.png");
 }
-.soda-barn-title, h1 {
+.soda-barn-header, h1 {
   font-family: "Bahnschrift Condensed", sans-serif;
 }
 
 /* SIZING */
+.soda-barn-header {
+	padding: 0.5em 0 0 0;
+}
+.header-divider {
+  width: 350px; /*this needs to be customized whenever the navbar is changed*/
+  height: 1px;
+  margin: auto;
+  margin-top: 0.5em;
+}
 .navbar, .footer {
 	height: auto;
 	min-height: 4em;
 	width: 100%;
 }
+.navbar-toggler {
+  padding: auto;
+}
 .page-content {
 	min-height: 200px;
   
-  margin-top: 4em;
-	margin-bottom: 4em;
+  padding-top: 2em;
+	padding-bottom: 2em;
+  padding-left: 1em;
+  padding-right: 1em;
 	margin-left: auto;
 	margin-right: auto;
 }
 @media only screen and (min-width: 600px) {
 	.page-content {
+    padding-top: 4em;
+  	padding-bottom: 4em;
     max-width: 800px;
   }
 }
@@ -55,14 +77,19 @@ body {
 }
 .page-centerer {
 	width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  
   margin-right: auto;
   margin-left: auto;
 }
+@media only screen and (min-width: 600px) {
+	.page-centerer {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+}
 
 /* GENERAL */
-.soda-barn-title {
+.soda-barn-header {
   font-size: 3em;
   text-align: center;
 }
@@ -70,6 +97,10 @@ body {
 	.soda-barn-title {
     font-size: 4.5em;
   }
+}
+
+.heading {
+	padding-bottom: 1em;
 }
 
 .nav-item {
@@ -93,9 +124,22 @@ body {
 	text-align: center;
 }
 
-.github-repo {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: auto;
-	margin-bottom: auto;
+.footer-item a{
+	color: white;
+}
+
+.hours {
+	margin: 5em 0em;
+  margin-bottom: 0;
+}
+
+.menu-hr {
+	width: 50%;
+	margin-right: auto;
+  margin-left: auto;
+	border-top: 2px solid #033F47;
+}
+
+h2 {
+	font-size: 1.8em;
 }
