--- a/default.css
+++ b/default.css
@@ -5,11 +5,6 @@
 }
 
 /* COLOR */
-.soda-barn-header {
-  /*background-image: url("/media/background-pattern.png");*/
-  color: white;
-	background-color:	#1B5F76;				 /*#1B5F76*/
-}
 .header-divider {
   background-color: white;
 }
@@ -37,20 +32,13 @@ body {
 .soda-barn-header {
 	padding: 0.5em 0 0 0;
 }
-/*
-.header-divider {
-  width: 350px; /*this needs to be customized whenever the navbar is changed*/
-  /*height: 1px;
-  margin: auto;
-  margin-top: 0.5em;
-}*/
 .navbar, .footer {
 	height: auto;
 	min-height: 4em;
 	width: 100%;
 }
 .page-content {
-	min-height: 200px;
+  min-height: 75vh;
   
   padding-top: 2em;
 	padding-bottom: 2em;
@@ -63,7 +51,8 @@ body {
 	.page-content {
     padding-top: 4em;
   	padding-bottom: 4em;
-    max-width: 800px;
+    max-width: 100vh;
+    min-width: 50vw;
   }
 }
 
@@ -118,16 +107,6 @@ body {
 }
 
 /* GENERAL */
-/*.soda-barn-header {
-  font-size: 3em;
-  text-align: center;
-}
-@media only screen and (min-width: 600px) {
-	.soda-barn-title {
-    font-size: 4.5em;
-  }
-}*/
-
 .page-content {
 	text-align: center;
 }
