--- a/default.css
+++ b/default.css
@@ -29,6 +29,18 @@ body {
 }
 
 /* SIZING */
+body {
+  min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+}
+.page-centerer {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+}
 .soda-barn-header {
 	padding: 0.5em 0 0 0;
 }
@@ -38,7 +50,8 @@ body {
 	width: 100%;
 }
 .page-content {
-  min-height: 75vh;
+  /*min-height: 78.5vh;*/
+  flex: 1;
   
   padding-top: 2em;
 	padding-bottom: 2em;
